--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "cache-manager": "^6.4.2",
     "cache-manager-ioredis": "^2.1.0",
+    "cache-manager-redis-store": "^3.0.1",
     "ioredis": "^5.6.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
